namespace OthelloGame
{
    enum GameState
    {
        Playing,
        Finished
    }
}
