namespace OthelloGame
{
    public enum PieceColor
    {
        Black,
        White
    }
}
